--- a/css/style.css
+++ b/css/style.css
@@ -24,13 +24,16 @@ body {
 	font-size: 16px;
 	line-height: 1.5;
 	
-	background-color: #ffffff;
-	color: #333333;
-	margin: 40px auto 40px auto;
-	width: 620px;
+	background-color: #2a2a2a;
+	color: #ffffff;
+	margin: 40px 40px 40px 320px;
 }
 
-h1 {
-	font-size: 24px;
-	font-weight: 700;
+section.options {
+	background-color: #2a2a2a;
+	height: 100vh;
+	width: 280px;
+	position: fixed;
+	top: 0;
+	left: 0;
 }
