--- a/css/style.css
+++ b/css/style.css
@@ -23,6 +23,7 @@ body {
 	font-family: "Faune", Helvetica, Arial, sans-serif;
 	font-size: 16px;
 	line-height: 1.5;
+	overflow: hidden;
 	
 	background-color: #2a2a2a;
 	color: #ffffff;
