--- a/css/style.css
+++ b/css/style.css
@@ -91,3 +91,16 @@ textarea.output {
 	height: 100vh;
 	width: 100%;
 }
+
+div.colors {
+	display: flex;
+}
+
+div.colors div {
+	border: 2px solid rgba(255,255,255,0.25);
+	border-radius: 50%;
+	margin: 5px 10px 0 0;
+	text-align: center;
+	height: 30px;
+	width: 30px;
+}
