--- a/css/style.css
+++ b/css/style.css
@@ -27,7 +27,7 @@ body {
 	
 	background-color: #2a2a2a;
 	color: #ffffff;
-	margin: 40px 40px 40px 320px;
+	margin: 0 0 0 280px;
 }
 
 section.options {
@@ -87,6 +87,7 @@ textarea.output {
 	color: #ffffff;
 	font-size: 64px;
 	outline: none;
+	padding: 40px;
 	resize: none;
 	height: 100vh;
 	width: 100%;
