--- a/css/style.css
+++ b/css/style.css
@@ -89,6 +89,7 @@ textarea.output {
 	outline: none;
 	padding: 40px;
 	resize: none;
+	transition: background-color 0.25s;
 	height: 100vh;
 	width: 100%;
 }
@@ -102,6 +103,11 @@ div.colors div {
 	border-radius: 50%;
 	margin: 5px 10px 0 0;
 	text-align: center;
+	transition: border 0.25s;
 	height: 30px;
 	width: 30px;
+}
+
+div.colors div.selected {
+	border: 2px solid #ffffff;
 }
